# ImHex-Patterns

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/PULL_REQUEST_TEMPLATE/: pattern_template.md
.github/workflows/: dispatch.yml  tests.yml
constants/: _schema.json  crc16.json  crc32.json  http_status.json  linux_errors.json
disassemblers/: 8051.json  jvm.json
encodings/: ansi.tbl  arabic_iso.tbl  arabic_windows.tbl  ascii.tbl  ascii_ansi.tbl  ascii_oem.tbl  baltic_iso.tbl  baltic_windows.tbl  cyrillic_cp866.tbl  cyrillic_iso.tbl  cyrillic_koi8_r.tbl  cyrillic_koi8_u.tbl  eastern_europe_iso.tbl  eastern_europe_windows.tbl  ebcdic.tbl  euc_jp.tbl  euc_kr.tbl  gbk.tbl  greek_iso.tbl  greek_windows.tbl  hebrew_iso.tbl  hebrew_windows.tbl  iso_646.tbl  iso_6937.tbl  jis_x_0201.tbl  jis_x_0211.tbl  jis_x_0213.tbl  macintosh.tbl  ms932.tbl  pokeEmerald_en.tbl  pokegen1_en.tbl  pokegen3_en.tbl  shiftjis.tbl  shiftjis_halfchars.tbl  thai.tbl  ti83.tbl  turkish_iso.tbl  turkish_windows.tbl  utf8.tbl  vietnamese.tbl
includes/: cstdint.hexpat  cstdint.pat  spvgenerators.hexpat  spvopcodes.hexpat
includes/hex/: core.pat  dec.pat  http.pat  provider.pat
includes/libstd/: bit.pat  cint.pat  ctype.pat  file.pat  fxpt.pat  hash.pat  limits.pat  math.pat  mem.pat  ptr.pat  rustint.pat  string.pat
includes/std/: array.pat  attrs.pat  bit.pat  cint.pat  core.pat  ctype.pat  file.pat  fxpt.pat  hash.pat  http.pat  io.pat  limits.pat  math.pat  mem.pat  ptr.pat  random.pat  rustint.pat  string.pat  sys.pat  time.pat  types.pat
includes/type/: base.pat  base64.pat  bcd.pat  byte.pat  color.pat  float16.pat  fmt.pat  guid.pat  ieee754_binary.pat  ieee754_decimal.pat  ip.pat  leb128.pat  mac.pat  magic.pat  mmreg.pat  path.pat  size.pat  time.pat  varint.pat
magic/: arma3_magic  portable_executable_magic
nodes/: caesar.hexnode  xor.hexnode
patterns/: 3ds.hexpat  7z.hexpat  8xp.hexpat  ACU_DATA_Compressed.hexpat  ACU_DATA_Decompressed.hexpat  ACU_FORGE.hexpat  CGX.hexpat  Crashlvl.hexpat  DMC3 HD Mod.hexpat  Notepad-WindowState.hexpat  SHR.hexpat  a3_paa.hexpat  a3_rtm.hexpat  acu_data_compressed.hexpat  acu_data_decompressed.hexpat  adtfdat.hexpat  adts.hexpat  afe2.hexpat  android_boot_img.hexpat  ani.hexpat  ape.hexpat  apfs.hexpat  apple_single_double.hexpat  ar.hexpat  arc.hexpat  aria2.hexpat  arm_cm_vtor.hexpat  bcss.hexpat  bencode.hexpat  bgcode.hexpat  bink_container.hexpat  binka.hexpat  blend.hexpat  blf.hexpat  bloodborne_save.hexpat  bmp.hexpat  bplist.hexpat  bson.hexpat  bsp_goldsrc.hexpat  btrfs_send_stream.hexpat  (+216 more)
patterns/AC Unity/: acu_data_decompressed.hexpat
patterns/Assassin's Creed: Unity/: ACU_DATA_Compressed.hexpat  ACU_DATA_Decompressed.hexpat  acu_data_compressed.hexpat  acu_forge.hexpat
patterns/DFIR/: DFIR_README.md  DISK_PARSER.hexpat  FAT32.hexpat  NTFS.hexpat  exFAT.hexpat
patterns/Devil May Cry HD Collection/: dmc3_hd_mod.hexpat
patterns/GoldBox/: GB_CHR.hexpat  GB_ENUM.cs  GB_ENUM_IMG.cs  GB_EXE.hexpat  GB_GEO.hexpat  GB_ITM-Base.hexpat  GB_ITM-Record.hexpat  GB_STRUCT.cs  GB_STRUCT_ITM.cs  GB_UA_SCRIPT.hexpat  GB_UTIL.cs  GB_UTIL_ITM.cs  GB_VLT.hexpat
patterns/Spore/: spore-pdr.hexpat
patterns/a3/: a3_bmtr.hexpat  a3_p3d_mlod.hexpat  a3_paa.hexpat  a3_rap.hexpat  a3_rtm.hexpat  a3_texheaders.hexpat
patterns/fs/: apfs.hexpat  exfat.hexpat  ext4.hexpat  fat32.hexpat  mbr.hexpat  ntfs.hexpat  pattern.hexpat
patterns/mifare/: mifare-1k.hexpat  mifare-4k.hexpat
plugins/: extra-hashes.json
scripts/: csv2tbl.py  extract_legacy_hexproj.py  ksy2pat.py  svd2pat.py  utf8tblgen.py
tests/: CMakeLists.txt
tests/includes/: CMakeLists.txt
tests/includes/source/: main.cpp
tests/magic/: CMakeLists.txt
tests/magic/source/: main.cpp
tests/patterns/: CMakeLists.txt
tests/patterns/source/: main.cpp
tests/patterns/test_data/: 3ds.hexpat.3ds  7z.hexpat.7z  AsmHook2.8xp  CrashLvl.hexpat  GB_CHR.hexpat.03  GB_CHR.hexpat.qsv  GB_EXE.hexpat.04  GB_EXE.hexpat.06  GB_GEO.hexpat.02  GB_GEO.hexpat.07  GB_GEO.hexpat.10  GB_ITM-Base.hexpat.08  GB_UA_SCRIPT.hexpat.GLB  SHR_animation#C20000  a3_bmtr.hexpat.rtm  a3_p3d_mlod.hexpad.p3d  a3_paa.hexpat.paa  a3_rtm.hexpat.rtm  adtfdat.hexpat.adtfdat  adts.hexpat.aac  ani.compatibility.hexpat.ani  ani.hexpat.ani  ar.hexpat.ar  arc.hexpat.arc  aria2.hexpat.aria2  bink_container.hexpat.bik  bplist.hexpat.bplist  bsp_goldsrc.hexpat.bsp  bzip3.hexpat.bz3  cab.hexpat.cab  cda.hexpat.cda  cgx.hexpat.cgx  chm.hexpat.chm  commodore_basic.hexpat.prg  cpio.hexpat.cpio  cpio_new_ascii.hexpat.cpio  cpio_portable_ascii.hexpat.cpio  csnap.hexpat.csnap  dds.hexpat.dds  dex.hexpat.dex  (+87 more)
tests/patterns/test_data/bcss.hexpat/: test.bcss  test.bcss_content
tests/patterns/test_data/blend.hexpat/: blend.hexpat.blend  blend_zstd.hexpat.blend
tests/patterns/test_data/chromium_pak.hexpat/: kSampleCompressPakContentsV5.pak  kSampleCompressScaledPakContents.pak  kSamplePakContents2x.pak  kSamplePakContentsV4.pak
tests/patterns/test_data/dicom.hexpat/: jpeg-wsi.dcm  le-explicit-vlp.dcm
tests/patterns/test_data/flipper_settings.hexpat/: bt.settings  desktop.settings  dolphin.state  expansion.settings  infrared.settings  notification.settings
tests/patterns/test_data/gmf.hexpat/: gmf.hexpat.gmf
tests/patterns/test_data/gmf.hexpat/gmf.hexpat_data/: help
tests/patterns/test_data/gvas.hexpat/: complete_property_tag.sav  delegate.sav  palworld_zlib.sav  tagcontainer.sav  types.sav  ue4_utf-16.sav  ue5_PROPERTY_TAG_COMPLETE_TYPE_NAME.sav  vector2d.sav
tests/patterns/test_data/ntfs.hexpat/: 2m-vol.ntfs
tests/patterns/test_data/tiff.hexpat/: bigtiff-be-tiled.tiff  bigtiff-le-stripped.tiff  classic-be-stripped.tiff  classic-le-tiled.tiff
themes/: Nocturne.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  one_dark.json  retina_dark.json  solarized_dark.json  theme_lion.json  vs_dark.json
tips/: _schema.json  imhex.json  re.json
yara/advanced_analysis/: cryptography.yar  language.yar
(+10 files in other folders)
